deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  # The name of our deployment
  name: ration-app
  # Kubernetes matches things up by labels,
  # So we give it a few ones to identify this deployment by
  labels:
    app: ration
spec:
  # We want 3 instances of the app running
  replicas: 3
  selector:
    matchLabels:
      app: ration-app
  template:
    metadata:
      labels:
        app: ration-app
    spec:
      containers:
      # Here is our actual definition for deployment
      - name: ration-app
        # Here we add the image we built earlier
        image: chriscmsoft/sailsjs-demo
        # We are still overriding for development,
        # Until we have added tls
        command: ["node", "app.js"]
        ports:
          # The port INSIDE the container
        - containerPort: 1337
          # A name for the port
          name: app

        # Environment variables, the same as for docker-compose.
        # The only real difference is
        # env: key
        # and name:, value: definition.
        # This allows us to use secrets as env variables as well.
